fix align of pulsar logo

--- a/styles/title-bar.less
+++ b/styles/title-bar.less
@@ -207,6 +207,7 @@
     order: 0;
     flex-shrink: 0;
     margin-left: var(--title-bar-icon-margin);
+    transform: translateY(-3px);
 
     svg {
       display: block;
